test-suite/tests/roundtrip/invalid/syntax/missing_token/09/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/missing_token/09/input.essence:1:26:
  |
1 | find x: int(1..3 $comment
  |                          ^
Missing )

